[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/menus/settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/TitleBar"]
layout_mode = 2
text = "< Back"

[node name="Title" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="SettingsGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 12

[node name="MasterLabel" type="Label" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Master Volume"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="SFXLabel" type="Label" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "SFX Volume"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Music Volume"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
min_value = 0.0
max_value = 100.0
value = 60.0

[node name="ReduceMotionLabel" type="Label" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Reduce Motion"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)

[node name="ReduceMotionCheck" type="CheckButton" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2

[node name="GridSnapLabel" type="Label" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Grid Snap"
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)

[node name="GridSnapCheck" type="CheckButton" parent="VBoxContainer/SettingsGrid"]
layout_mode = 2
button_pressed = true

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 48)
text = "Reset All Progress"
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Reset Progress?"
